--- a/client/src/Components/css/FrontPage.css
+++ b/client/src/Components/css/FrontPage.css
@@ -2,14 +2,6 @@
    --english-white-color: #ffffff;
 }
 
-.frontPage {
-   position: absolute;
-   width: 100%;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, 0);
-}
-
 .creditIcon {
    bottom: 0;
    right: 0;
